--- a/make.conf
+++ b/make.conf
@@ -17,4 +17,4 @@ USE="X dbus postproc gtk3 usbredir script pkcs11 tools lzma lzo minizip opus vpx
 LC_MESSAGES=C.utf8
 GRUB_PLATFORMS="efi-64"
 INPUT_DEVICES="libinput synaptics"
-VIDEO_CARDS="intel i965 iris"
+VIDEO_CARDS="intel i965"
